--- a/index.html
+++ b/index.html
@@ -4,12 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <title>JS Timer</title>
+    <style media="screen">
+    .wrapper{
+      width: 300px;
+      margin: 30px auto;
+    }
+      #timer-output{
+        background-color: #900;
+        color: #fff;
+        padding: 90px 15px 10px 15px;
+        border: 3px solid #777;
+        width: 250px;
+        height: 175px;
+        margin: 30px auto;
+        text-align: center;
+        font-family: monospace;
+        font-size: 50px;
+      }
+
+      button[name="startTimer"]{
+        background-color: #090;
+        padding: 15px;
+        color: #fff;
+        border: 1px solid #777;
+        width: 300px;
+        font-size: 30px;
+        margin: 0 auto;
+      }
+
+      button[name="startTimer"]:hover{
+        background-color: #777;
+        cursor: pointer;
+      }
+    </style>
 </head>
 
 <body>
+  <div class="wrapper">
+    <h1>JavaScript Timer</h1>
+    <form action="#">
+      <select id="form-choice" name="choice">
+        <option value="5">5</option>
+        <option value="10">10</option>
+        <option value="15">15</option>
+        <option value="30">30</option>
+        <option value="60">60</option>
+      </select>
+    </form>
     <div id="timer-output"></div>
-    <script src="./resources/js/script.js">
-    </script>
+    <button type="button" name="startTimer">Start</button>
+  </div>
+  <script src="./resources/js/script.js"></script>
 </body>
 
 </html>
